www/css/app.css
body {
    width: 100%;
    height: 100%;
    margin: 0;
    padding: 0;
    background-color: black;
}

p {
    padding: 0;
    margin: 0 auto 1.5em auto;
}

p.lead {
    font-style: italic;
}

.texthud{
    font-size: 2em;
    display: inline;
}

div#menu{
    width: 100%;
    height: 100%;
    text-align:center;
    position: absolute;
}

div#gameover{
    display: none;
    width: 50%;
    margin: auto;
    color: white;
    text-align: center;
}

div#victory{
    display: none;
    width: 50%;
    margin: auto;
    color: white;
    text-align: center;
}

button#gameoverButton{
    font-size: 4em;
}

button#victoryButton{
    font-size: 4em;
}

div#game{
    display: none;
    color: white;
}

div#lowerHud{
    height: 15%;
}

div#upperHud{
    height: 15%;
    width: 100%;
    margin: 0;
    padding: 0;
}

img#coin{
    width: 3em;
    height: auto;
    float: left;

    /* Prevent a blue 'selection background' from appearing behind the coin
       when double tapping the map. */
    -moz-user-select: none;
    -webkit-user-select: none;
}

p#money {
    float: left;

}
p.texthud{
    margin: 0;
    padding: 0;
}

canvas#hpbar{
    border: 1px solid black;
    width: 50%;
    height: 3em;
    margin-right: 5%;
    float: right;
}

div#hudButtons {
    clear: both;
    width: 100%;
}

button.buildbutton {
    height: 70%;
    margin: 0;
    padding: 0;
}

img.buildimg {
    height: inherit;
    width:auto;
}


div#instructions{
    display: none;
    font-size: 1.5em;
    color: white;
    margin-left: 10%;
}

div#highscore{
    display: none;
    font-size: 1.5em;
    color: white;
}

div#menu ul{
    list-style-type: none; 
    padding: 0;
    width: 100%;
}

div#menu li{
    margin-bottom: 2%;
}

div#menu button{
    width: 60%; 
    font-size: 2.5em;
    border-radius: 3em;
}

img#logo{
    padding-top: 20%;
    padding-bottom: 10%;
    display: block; 
    margin-left: auto;
    margin-right: auto;
    width: 90%;
}

table#gameElements{
    border-spacing: 20px;
}

